--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#Home" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Home</a>
             <a href="#our-profile" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Our Profile</a>
             <a href="#portofolio" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Portofolio</a>
-            <a href="#contact-us" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Contact Us</a>
+            <a href="#message-us" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Message Us</a>
 
             <link href="https://api.fontshare.com/v2/css?f[]=clash-display@600&display=swap" rel="stylesheet">
             <link rel="preconnect" href="https://fonts.googleapis.com ">
@@ -38,7 +38,7 @@ rel="stylesheet">
 
                 <h1 class="text-indigo-950 text-[70px] font-['Clash_Display'] leading-tight">Hi, <span id="welcome-speech"></span>! <br> Welcome to <br>Egea Portfolio</h1>
                 <br><br><br> 
-                <a href="#our-profile" class="bg-indigo-950 bg-violet-700 text-white px-4 py-2 rounded hover:bg-blue-600">View Our
+                <a href="#our-profile" class="bg-indigo-950 bg-violet-700 text-white px-4 py-2 rounded hover:bg-blue-600 font-['Clash_Display']">View Our
                     Profile</a>
          
 
@@ -52,13 +52,13 @@ rel="stylesheet">
                     <p class="text-lg  max-w-2xl mx-auto">Kami adalah tim kreatif yang fokus pada pembuatan pengalaman web
                         yang menarik, responsif, dan mudah diakses. Keahlian kami meliputi desain UI/UX, pengembangan frontend,
                         dan optimisasi performa.</p>
-                    <div class=" md:flex-row items-center justify-center gap-9">
+                    <div class=" md:flex-row items-center justify-center gap-9 mx-auto">
                         <br>
-                       <center> <img src="https://via.placeholder.com/160" alt="Profile image"
-                            class="w-40 h-40 rounded-full object-cover shadow-md"></center>
+                       <img src="https://via.placeholder.com/160" alt="Profile image"
+                            class="w-40 h-40 rounded-full object-cover shadow-md text-center mx-auto">
                             <br>
-                            <div class=" max-w-xl">
-                               <center> <h3 class="text-xl font-medium mb-2 p-8">Keahlian</h3> </center>
+                            <div class=" max-w-xl text-center mx-auto">
+                               <h3 class="text-xl font-medium mb-2 p-8">Keahlian</h3>
                                 <ul class="flex pl-5 space-y-1 text-gray-700 text-center">
                                     <li>HTML, CSS, JavaScript</li>
                                     <li>Desain responsif & aksesibilitas</li>
@@ -71,9 +71,9 @@ rel="stylesheet">
                         </section>
 
                         <section>
-                            <div id="portofolio" class="portofolio-section text-center min-h-230 p-8 bg-gray-100 mt-8 font-['Clash_Display']">
+                            <div id="portofolio" class="portofolio-section text-center min-h-200 p-8 bg-gray-100 mt-8 font-['Clash_Display']">
                                 <h1 class="text-5xl font-semibold mb-4">Portofolio</h1>
-                                <p class="text-lg mb-6 max-w-2xl mx-auto">Berikut adalah beberapa proyek</p>
+                                <p class="text-lg mb-6 max-w-2xl mx-auto p-2">Berikut adalah beberapa proyek</p>
 
                                 <!-- kartu proyek,kartu memanjang ke samping (image + konten secara horizontal pada layar md+) -->
                                 <div class="flex flex-col gap-6">
@@ -113,10 +113,10 @@ rel="stylesheet">
                             </div>
                         </section>
 
-                        <section id="contact-us">
+                        <section id="message-us">
                             <div class="contact-section text-center p-8 bg-white mt-8 font-['Clash_Display']">
 
-                                <h2 class="text-5xl font-semibold mb-4">Contact Us</h2>
+                                <h2 class="text-5xl font-semibold mb-4">Message Us</h2>
                                 <p class="text-lg mb-6 max-w-2xl mx-auto">Ingin bekerja sama atau memiliki pertanyaan? Hubungi kami!</p>
                                 <form class="max-w-md mx-auto space-y-4">
                                     <input type="text" placeholder="Your Name" id="name-input"
@@ -133,8 +133,7 @@ rel="stylesheet">
 
                                 <!-- ini adalah footer -->
                                 <footer>
-                                    <hr class="my-4 border-gray-300">
-                                        <p class="text-center font-bold">copyright &copy; 2024 by EgeaHadi</p>
+                                        <p class="text-center font-bold font-['Clash_Display'] p-8">copyright &copy; 2024 by EgeaHadi</p>
                                 </footer>
                             </body>
 
