--- a/index.html
+++ b/index.html
@@ -8,25 +8,31 @@
     <script src="js/script.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://api.fontshare.com/v2/css?f[]=clash-display@600&display=swap" rel="stylesheet">
+            <link rel="preconnect" href="https://fonts.googleapis.com ">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body class="bg-[#F1F4F5] font-[Poppins]">
     <!-- ini adalah header -->
     <header class=".main-header flex justify-between align-center p-4 mx-auto">
+        <div class="w-16 h-16 rounded-full bg-green-500 flex items-center justify-center text-white font-bold text-lg">
+            L
+        </div>
+        <nav class="flex items-center gap-3">
+            <a href="#Home"
+                class="hover:underline text-base text-sm md:text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Home</a>
+            <a href="#our-profile"
+                class="hover:underline text-base text-sm md:text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Our
+                Profile</a>
+            <a href="#portofolio"
+                class="hover:underline text-base text-sm md:text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Portofolio</a>
+            <a href="#message-us"
+                class="hover:underline text-base text-sm md:text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Message
+                Us</a>
 
-        <div class="logo-icon"> </div>
-        <nav class="flex items-center gap-4">
-            <a href="#Home" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Home</a>
-            <a href="#our-profile" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Our Profile</a>
-            <a href="#portofolio" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Portofolio</a>
-            <a href="#message-us" class="hover:underline text-base text-indigo-950 hover:font-semibold hover:text-violet-700">Message Us</a>
-
-            <link href="https://api.fontshare.com/v2/css?f[]=clash-display@600&display=swap" rel="stylesheet">
-            <link rel="preconnect" href="https://fonts.googleapis.com ">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css?family=Poppins:wght@400;600;700&display=swap"
-
-rel="stylesheet">
+            
         </nav>
 
     </header>
@@ -34,107 +40,113 @@ rel="stylesheet">
     <main>
 
         <section id="Home" class="flex flex-col items-center justify-center min-h-[75vh]">
-   
 
-                <h1 class="text-indigo-950 text-[70px] font-['Clash_Display'] leading-tight">Hi, <span id="welcome-speech"></span>! <br> Welcome to <br>Egea Portfolio</h1>
-                <br><br><br> 
-                <a href="#our-profile" class="bg-indigo-950 bg-violet-700 text-white px-4 py-2 rounded hover:bg-blue-600 font-['Clash_Display']">View Our
-                    Profile</a>
-         
+
+            <h1 class="text-indigo-950 text-[70px] font-['Clash_Display'] leading-tight">Hi, <span
+                    id="welcome-speech"></span>! <br> Welcome to <br>Egea Portfolio</h1>
+            <br><br><br>
+            <a href="#our-profile"
+                class="bg-indigo-950 bg-violet-700 text-white px-4 py-2 rounded hover:bg-blue-600 font-['Clash_Display']">View
+                Our
+                Profile</a>
+
 
         </section>
 
 
 
-    <!--ini adalah section our profile -->
-                <section id="our-profile" class="profile-section text-center min-h-250 p-8 bg-white mt-8 font-['Clash_Display']">
-                    <h2 class="text-5xl font-bold mb-9 p-8 ">Our Profile</h2>
-                    <p class="text-lg  max-w-2xl mx-auto">Kami adalah tim kreatif yang fokus pada pembuatan pengalaman web
-                        yang menarik, responsif, dan mudah diakses. Keahlian kami meliputi desain UI/UX, pengembangan frontend,
-                        dan optimisasi performa.</p>
-                    <div class=" md:flex-row items-center justify-center gap-9 mx-auto">
-                        <br>
-                       <img src="https://via.placeholder.com/160" alt="Profile image"
-                            class="w-40 h-40 rounded-full object-cover shadow-md text-center mx-auto">
-                            <br>
-                            <div class=" max-w-xl text-center mx-auto">
-                               <h3 class="text-xl font-medium mb-2 p-8">Keahlian</h3>
-                                <ul class="flex pl-5 space-y-1 text-gray-700 text-center">
-                                    <li>HTML, CSS, JavaScript</li>
-                                    <li>Desain responsif & aksesibilitas</li>
-                                    <li>Prototyping & user testing</li>
-                                </ul>
-                                <a href="#contact-us"
-                                    class="inline-block mt-4 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Hubungi
-                                    Kami</a>
-                            </div>
-                        </section>
+        <!--ini adalah section our profile -->
+        <section id="our-profile"
+            class="profile-section text-center min-h-250 p-8 bg-white mt-8 font-['Clash_Display']">
+            <h2 class="text-5xl font-bold mb-9 p-8 ">Our Profile</h2>
+            <p class="text-lg  max-w-2xl mx-auto">Kami adalah tim kreatif yang fokus pada pembuatan pengalaman web
+                yang menarik, responsif, dan mudah diakses. Keahlian kami meliputi desain UI/UX, pengembangan frontend,
+                dan optimisasi performa.</p>
+            <div class=" md:flex-row items-center justify-center gap-9 mx-auto">
+                <br>
+                <img src="https://via.placeholder.com/160" alt="Profile image"
+                    class="w-40 h-40 rounded-full object-cover shadow-md text-center mx-auto">
+                <br>
+                <div class=" max-w-xl text-center mx-auto">
+                    <h3 class="text-xl font-medium mb-2 p-8">Keahlian</h3>
+                    <ul class="flex pl-5 space-y-1 text-gray-700 text-center">
+                        <li>HTML, CSS, JavaScript</li>
+                        <li>Desain responsif & aksesibilitas</li>
+                        <li>Prototyping & user testing</li>
+                    </ul>
+                    <a href="#contact-us"
+                        class="inline-block mt-4 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">Hubungi
+                        Kami</a>
+                </div>
+        </section>
 
-                        <section>
-                            <div id="portofolio" class="portofolio-section text-center min-h-200 p-8 bg-gray-100 mt-8 font-['Clash_Display']">
-                                <h1 class="text-5xl font-semibold mb-4">Portofolio</h1>
-                                <p class="text-lg mb-6 max-w-2xl mx-auto p-2">Berikut adalah beberapa proyek</p>
+        <section>
+            <div id="portofolio"
+                class="portofolio-section text-center min-h-200 p-8 bg-gray-100 mt-8 font-['Clash_Display']">
+                <h1 class="text-5xl font-semibold mb-4">Portofolio</h1>
+                <p class="text-lg mb-6 max-w-2xl mx-auto p-2">Berikut adalah beberapa proyek</p>
 
-                                <!-- kartu proyek,kartu memanjang ke samping (image + konten secara horizontal pada layar md+) -->
-                                <div class="flex flex-col gap-6">
-                                    <article
-                                        class="bg-white p-4 rounded shadow hover:shadow-lg transition-shadow flex flex-col md:flex-row items-center md:items-start gap-4">
-                                        <img src="https://via.placeholder.com/600x360" alt="Project 1"
-                                            class="w-full md:w-1/3 h-48 md:h-40 object-cover rounded">
-                                            <div class="text-left md:flex-1">
-                                                <h3 class="text-xl font-medium mb-2">Proyek 1</h3>
-                                                <p class="text-gray-700">Deskripsi singkat tentang proyek ini. Konten dan detail berada di
-                                                    samping gambar sehingga blok memanjang secara horizontal pada layar lebih lebar.</p>
-                                            </div>
-                                    </article>
+                <!-- kartu proyek,kartu memanjang ke samping (image + konten secara horizontal pada layar md+) -->
+                <div class="flex flex-col gap-6">
+                    <article
+                        class="bg-white p-4 rounded shadow hover:shadow-lg transition-shadow flex flex-col md:flex-row items-center md:items-start gap-4">
+                        <img src="https://via.placeholder.com/600x360" alt="Project 1"
+                            class="w-full md:w-1/3 h-48 md:h-40 object-cover rounded">
+                        <div class="text-left md:flex-1">
+                            <h3 class="text-xl font-medium mb-2">Proyek 1</h3>
+                            <p class="text-gray-700">Deskripsi singkat tentang proyek ini. Konten dan detail berada di
+                                samping gambar sehingga blok memanjang secara horizontal pada layar lebih lebar.</p>
+                        </div>
+                    </article>
 
-                                    <article
-                                        class="bg-white p-4 rounded shadow hover:shadow-lg transition-shadow flex flex-col md:flex-row items-center md:items-start gap-4">
-                                        <img src="https://via.placeholder.com/600x360" alt="Project 2"
-                                            class="w-full md:w-1/3 h-48 md:h-40 object-cover rounded">
-                                            <div class="text-left md:flex-1">
-                                                <h3 class="text-xl font-medium mb-2">Proyek 2</h3>
-                                                <p class="text-gray-700">Deskripsi singkat tentang proyek ini. Setiap kartu memiliki layout
-                                                    horizontal pada layar sedang/besar dan tetap berurutan ke bawah.</p>
-                                            </div>
-                                    </article>
+                    <article
+                        class="bg-white p-4 rounded shadow hover:shadow-lg transition-shadow flex flex-col md:flex-row items-center md:items-start gap-4">
+                        <img src="https://via.placeholder.com/600x360" alt="Project 2"
+                            class="w-full md:w-1/3 h-48 md:h-40 object-cover rounded">
+                        <div class="text-left md:flex-1">
+                            <h3 class="text-xl font-medium mb-2">Proyek 2</h3>
+                            <p class="text-gray-700">Deskripsi singkat tentang proyek ini. Setiap kartu memiliki layout
+                                horizontal pada layar sedang/besar dan tetap berurutan ke bawah.</p>
+                        </div>
+                    </article>
 
-                                    <article
-                                        class="bg-white p-4 rounded shadow hover:shadow-lg transition-shadow flex flex-col md:flex-row items-center md:items-start gap-4">
-                                        <img src="https://via.placeholder.com/600x360" alt="Project 3"
-                                            class="w-full md:w-1/3 h-48 md:h-40 object-cover rounded">
-                                            <div class="text-left md:flex-1">
-                                                <h3 class="text-xl font-medium mb-2">Proyek 3</h3>
-                                                <p class="text-gray-700">Deskripsi singkat tentang proyek ini. Tambahkan proyek lain dengan
-                                                    menyalin struktur article ini.</p>
-                                            </div>
-                                    </article>
-                                </div>
-                            </div>
-                        </section>
+                    <article
+                        class="bg-white p-4 rounded shadow hover:shadow-lg transition-shadow flex flex-col md:flex-row items-center md:items-start gap-4">
+                        <img src="https://via.placeholder.com/600x360" alt="Project 3"
+                            class="w-full md:w-1/3 h-48 md:h-40 object-cover rounded">
+                        <div class="text-left md:flex-1">
+                            <h3 class="text-xl font-medium mb-2">Proyek 3</h3>
+                            <p class="text-gray-700">Deskripsi singkat tentang proyek ini. Tambahkan proyek lain dengan
+                                menyalin struktur article ini.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
 
-                        <section id="message-us">
-                            <div class="contact-section text-center p-8 bg-white mt-8 font-['Clash_Display']">
+        <section id="message-us">
+            <div class="contact-section text-center p-8 bg-white mt-8 font-['Clash_Display']">
 
-                                <h2 class="text-5xl font-semibold mb-4">Message Us</h2>
-                                <p class="text-lg mb-6 max-w-2xl mx-auto">Ingin bekerja sama atau memiliki pertanyaan? Hubungi kami!</p>
-                                <form class="max-w-md mx-auto space-y-4">
-                                    <input type="text" placeholder="Your Name" id="name-input"
-                                        class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
-                                        <input type="email" placeholder="Your Email" id="email-input"
-                                            class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
-                                            <textarea placeholder="Your Message" rows="4" id="message-input"
-                                                class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
-                                            <button onclick="validateForm()" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Send
-                                                Message</button>
-                                        </form>
-                                    </section>
-                                </main>
+                <h2 class="text-5xl font-semibold mb-4">Message Us</h2>
+                <p class="text-lg mb-6 max-w-2xl mx-auto">Ingin bekerja sama atau memiliki pertanyaan? Hubungi kami!</p>
+                <form class="max-w-md mx-auto space-y-4">
+                    <input type="text" placeholder="Your Name" id="name-input"
+                        class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <input type="email" placeholder="Your Email" id="email-input"
+                        class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <textarea placeholder="Your Message" rows="4" id="message-input"
+                        class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500"></textarea>
+                    <button onclick="validateForm()"
+                        class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Send
+                        Message</button>
+                </form>
+        </section>
+    </main>
 
-                                <!-- ini adalah footer -->
-                                <footer>
-                                        <p class="text-center font-bold font-['Clash_Display'] p-8">copyright &copy; 2024 by EgeaHadi</p>
-                                </footer>
-                            </body>
+    <!-- ini adalah footer -->
+    <footer>
+        <p class="text-center font-bold font-['Clash_Display'] p-8">copyright &copy; 2024 by EgeaHadi</p>
+    </footer>
+</body>
 
-                        </html>
+</html>
