Fix image source path for logo in header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class=".main-header flex justify-between align-center p-4 mx-auto bg-[#78B9B5]">
         <div
             class="w-16 h-16 rounded-full bg-transparan flex items-center justify-center text-white font-bold text-lg overflow-hidden">
-            <img src="/img/logo.jpg" alt="logo">
+            <img src="img/logo.jpg" alt="logo">
 
         </div>
         <nav class="flex items-center gap-3 ">
